--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<article class="col-md-4 col-sm-12">
 				<div class="row">
 					<article class="col-md-3 col-sm-4 col-2">
-						<i class="las la-phone"></i>
+						<i class="las la-chart-pie"></i>
 					</article>
 					
 				<article class="col-md-9 col-sm-8 col-10">
